<resources>
    <string name="app_name">SemPastries</string>

    <string name="sign_up">Sign Up</string>
    <string name="fill_details">Fill in details below</string>
    <string name="phone">Phone Number</string>
    <string name="_234">+234</string>
    <string name="_90">9012345678</string>
    <string name="surname">Surname</string>
    <string name="surnameHint">Sems</string>
    <string name="firstname">Firstname</string>
    <string name="firstnameHint">Pastry</string>
    <string name="gender">Gender</string>
    <string name="genderHint">Male</string>
    <string name="password">Password</string>
    <string name="country">Country</string>
    <string name="countryHelper">Naija</string>
    <string name="state">State</string>
    <string name="stateHelper">Oyo</string>
    <string name="city">City</string>
    <string name="cityHelper">Ibadan</string>
    <string name="email">Email</string>
    <string name="emailHint">sempastries@gmail.com</string>
    <string name="passwordHint">********</string>
    <string name="select_country">Select Country</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="select_gender">Select Gender</string>
    <string name="unknown_err">Unknown Error</string>
    <string name="network_err">Network Error</string>
    <string name="completeReg">Complete Registration</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_acc">Don\'t have an account ?</string>
    <string name="already_have_acc">Already have an account ?</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="reset_assword">Reset Password</string>
    <string name="input_forgot_email">Input email you registered with</string>
    <string name="sure_to_exit">Are you sure you want to exit ?</string>
    <string name="no">No</string>
    <string name="yes_exit">Yes Exit</string>


    <string-array name="tel_codes">
        <item>+1</item>
        <item>+20</item>
        <item>+211</item>
        <item>+212</item>
        <item>+213</item>
        <item>+216</item>
        <item>+218</item>
        <item>+220</item>
        <item>+221</item>
        <item>+222</item>
        <item>+223</item>
        <item>+224</item>
        <item>+225</item>
        <item>+226</item>
        <item>+227</item>
        <item>+228</item>
        <item>+229</item>
        <item>+230</item>
        <item>+231</item>
        <item>+232</item>
        <item>+233</item>
        <item>+234</item>
        <item>+235</item>
        <item>+236</item>
        <item>+237</item>
        <item>+238</item>
        <item>+239</item>
        <item>+240</item>
        <item>+241</item>
        <item>+242</item>
        <item>+243</item>
        <item>+244</item>
        <item>+245</item>
        <item>+246</item>
        <item>+247</item>
        <item>+248</item>
        <item>+249</item>
        <item>+250</item>
        <item>+251</item>
        <item>+252</item>
        <item>+253</item>
        <item>+254</item>
        <item>+255</item>
        <item>+256</item>
        <item>+257</item>
        <item>+258</item>
        <item>+260</item>
        <item>+261</item>
        <item>+262</item>
        <item>+263</item>
        <item>+264</item>
        <item>+265</item>
        <item>+266</item>
        <item>+267</item>
        <item>+268</item>
        <item>+269</item>
        <item>+27</item>
        <item>+290</item>
        <item>+291</item>
        <item>+297</item>
        <item>+298</item>
        <item>+299</item>
        <item>+30</item>
        <item>+31</item>
        <item>+33</item>
        <item>+34</item>
        <item>+350</item>
        <item>+351</item>
        <item>+352</item>
        <item>+353</item>
        <item>+354</item>
        <item>+355</item>
        <item>+356</item>
        <item>+357</item>
        <item>+358</item>
        <item>+359</item>
        <item>+370</item>
        <item>+371</item>
        <item>+372</item>
        <item>+373</item>
        <item>+374</item>
        <item>+375</item>
        <item>+376</item>
        <item>+377</item>
        <item>+378</item>
        <item>+379</item>
        <item>+380</item>
        <item>+381</item>
        <item>+382</item>
        <item>+383</item>
        <item>+385</item>
        <item>+386</item>
        <item>+387</item>
        <item>+389</item>
        <item>+39</item>
        <item>+40</item>
        <item>+41</item>
        <item>+420</item>
        <item>+421</item>
        <item>+423</item>
        <item>+43</item>
        <item>+44</item>
        <item>+45</item>
        <item>+46</item>
        <item>+47</item>
        <item>+48</item>
        <item>+49</item>
        <item>+500</item>
        <item>+501</item>
        <item>+502</item>
        <item>+503</item>
        <item>+504</item>
    </string-array>
</resources>